test/ui/test/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.stderr
error[E006]: multiple ‘doc-attributes’ attributes
 --> ${TEST_FOLDER}/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.lushui:7:1
  |
7 | @doc-attributes
  | ^^^^^^^^^^^^^^^ duplicate or conflicting attribute
  |
 --> ${TEST_FOLDER}/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.lushui:9:5
  |
9 |     @doc-attributes
  |     ^^^^^^^^^^^^^^^ duplicate or conflicting attribute
  |

error: aborting due to previous error

