test/ui/test/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.lushui
;;; TEST compiler-args --no-core -Z internals

;;; we are using `@doc-attributes` right now since it's allowed on both modules and module headers, it's
;;; not "coexistable" (old terminology) and it's implemented.
;;; @Task use `@recursion-limit` (or anything non-internal) instead once it's implemented.

@doc-attributes
module attrs of
    @doc-attributes
    module

